--- a/css/tourism.css
+++ b/css/tourism.css
@@ -1,7 +1,7 @@
 /* Start Variables */
 :root {
   --main-color: #19c8fa;
-  --transparent-color: rgb(15 116 143 / 70%);
+  --transparent-color: rgb(15 116 143 / 35%);
   --section-padding: 100px;
   --main-text-color: #777;
 }
@@ -54,8 +54,9 @@ header {
   position: absolute;
   left: 0;
   width: 100%;
-  z-index: 2;
+  z-index: 1;
 }
+
 header .container {
   display: flex;
   justify-content: space-between;
@@ -63,7 +64,7 @@ header .container {
   position: relative;
   min-height: 97px;
 }
-header .container::after {
+/* header .container::after {
   content: "";
   position: absolute;
   height: 1px;
@@ -71,7 +72,7 @@ header .container::after {
   bottom: 0;
   width: calc(100% - 30px);
   left: 15px;
-}
+} */
 header .container .logo img {
   max-height: 150px;
 }
@@ -83,11 +84,12 @@ header .container nav {
 }
 header .container nav ul {
   display: flex;
-  gap: 20px;
+  gap: 25px;
 }
 header .container nav ul li a {
   text-decoration: none;
   color: black;
+  font-size: 1.3rem;
 }
 header .container nav ul li .active {
   color: #1b79f3;
@@ -102,7 +104,7 @@ header nav ul li a:hover {
   border-bottom: 1px solid var(--main-color);
   padding-bottom: 15px;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   header .container nav ul {
     display: none;
     flex-direction: column;
@@ -112,8 +114,9 @@ header nav ul li a:hover {
     top: 100%;
     right: 0;
     width: 100%;
-    height: 60vh;
+    height: 100vh;
     background-color: black;
+    z-index: 5;
   }
   header .container nav ul .trans {
     transition: background-color 1s ease;
@@ -135,6 +138,7 @@ header nav ul li a:hover {
   }
   header .container nav ul li a {
     color: white;
+    font-size: 1.5rem;
   }
   header .container .logo img {
     max-height: 100px;
@@ -147,3 +151,121 @@ header nav ul li a:hover {
   }
 }
 /* End Header */
+
+/* Start video section */
+.video {
+  top: 150px;
+  position: relative;
+  margin-bottom: var(--section-padding);
+  display: flex;
+}
+.video video {
+  max-width: 100%;
+}
+.video::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0px;
+  background-color: var(--transparent-color);
+  z-index: 2;
+}
+.video .text {
+  padding: calc(var(--section-padding) / 2) 0;
+  text-align: right;
+  width: 90%;
+  position: absolute;
+  bottom: 50%;
+  transform: translateY(50%);
+  -webkit-transform: translateY(50%);
+  -moz-transform: translateY(50%);
+  -ms-transform: translateY(50%);
+  -o-transform: translateY(50%);
+  text-transform: uppercase;
+  right: 10%;
+  z-index: 3;
+}
+.video .text p {
+  font-size: 2.8rem;
+  color: white;
+  padding: 10px;
+}
+.video .text h2 {
+  font-size: 3.8rem;
+  color: white;
+  font-weight: bold;
+  padding: 10px 0 30px 0;
+}
+.video .text a {
+  display: block;
+  text-decoration: none;
+  color: white;
+  width: 100px;
+  height: 40px;
+  line-height: 20px;
+  background-color: #d81313;
+  padding: 8px 20px;
+  font-weight: bold;
+  outline: solid 2px black;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .video .text {
+    display: flex;
+    flex-flow: column;
+  }
+  .video .text p {
+    font-size: 1.8rem;
+  }
+  .video .text h2 {
+    font-size: 2.5rem;
+  }
+  .video .text a {
+    width: 90px;
+    height: 35px;
+    padding: 5px 16px;
+    margin-bottom: 14px;
+  }
+}
+@media (max-width: 370px) {
+  .video .text p {
+    font-size: 1.3rem;
+    padding: 5px;
+  }
+  .video .text h2 {
+    font-size: 1.8rem;
+    padding: 5px 0 15px 0;
+  }
+  .video .text a {
+    width: fit-content;
+    height: 25px;
+    font-size: 13px;
+    line-height: 15px;
+  }
+}
+.whatsapp {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 7;
+  background-color: #00f028;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+.whatsapp a {
+  text-decoration: none;
+}
+.whatsapp a i {
+  color: green;
+}
+/* End video section */
