--- a/css/tourism.css
+++ b/css/tourism.css
@@ -9,7 +9,7 @@
 /* Start Global Rules */
 * {
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -121,7 +121,7 @@ header nav ul li a:hover {
   header .container nav ul .trans {
     transition: background-color 1s ease;
     -webkit-transition: background-color 1s ease;
-    -moz-transition: background-color 1s ease;
+    transition: background-color 1s ease;
     -ms-transition: background-color 1s ease;
     -o-transition: background-color 1s ease;
   }
@@ -152,17 +152,21 @@ header nav ul li a:hover {
 }
 /* End Header */
 
-/* Start video section */
-.video {
+/* Start images section */
+.images {
   top: 150px;
   position: relative;
   margin-bottom: var(--section-padding);
   display: flex;
 }
-.video video {
+.images img {
   max-width: 100%;
+  animation-name: cf4FadeInOut;
+  animation-delay: 3s;
+  animation-iteration-count: infinite;
+  animation-duration: 3.3s;
 }
-.video::before {
+.images::before {
   content: "";
   width: 100%;
   height: 100%;
@@ -172,33 +176,33 @@ header nav ul li a:hover {
   background-color: var(--transparent-color);
   z-index: 2;
 }
-.video .text {
+.images .text {
   padding: calc(var(--section-padding) / 2) 0;
   text-align: right;
   width: 90%;
   position: absolute;
-  bottom: 50%;
+  bottom: 65%;
   transform: translateY(50%);
   -webkit-transform: translateY(50%);
-  -moz-transform: translateY(50%);
+  transform: translateY(50%);
   -ms-transform: translateY(50%);
   -o-transform: translateY(50%);
   text-transform: uppercase;
   right: 10%;
   z-index: 3;
 }
-.video .text p {
+.images .text p {
   font-size: 2.8rem;
   color: white;
   padding: 10px;
 }
-.video .text h2 {
+.images .text h2 {
   font-size: 3.8rem;
   color: white;
   font-weight: bold;
   padding: 10px 0 30px 0;
 }
-.video .text a {
+.images .text a {
   display: block;
   text-decoration: none;
   color: white;
@@ -212,17 +216,17 @@ header nav ul li a:hover {
   text-align: center;
 }
 @media (max-width: 768px) {
-  .video .text {
+  .images .text {
     display: flex;
     flex-flow: column;
   }
-  .video .text p {
+  .images .text p {
     font-size: 1.8rem;
   }
-  .video .text h2 {
+  .images .text h2 {
     font-size: 2.5rem;
   }
-  .video .text a {
+  .images .text a {
     width: 90px;
     height: 35px;
     padding: 5px 16px;
@@ -230,15 +234,15 @@ header nav ul li a:hover {
   }
 }
 @media (max-width: 370px) {
-  .video .text p {
+  .images .text p {
     font-size: 1.3rem;
     padding: 5px;
   }
-  .video .text h2 {
+  .images .text h2 {
     font-size: 1.8rem;
     padding: 5px 0 15px 0;
   }
-  .video .text a {
+  .images .text a {
     width: fit-content;
     height: 25px;
     font-size: 13px;
@@ -258,7 +262,7 @@ header nav ul li a:hover {
   justify-content: center;
   border-radius: 50%;
   -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
+  border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
@@ -268,4 +272,23 @@ header nav ul li a:hover {
 .whatsapp a i {
   color: green;
 }
-/* End video section */
+
+@keyframes cf4FadeInOut {
+  0% {
+    opacity: 1;
+  }
+  17% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 1;
+  }
+  92% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+/* End images section */
