--- a/css/tourism.css
+++ b/css/tourism.css
@@ -4,6 +4,7 @@
   --transparent-color: rgb(15 116 143 / 35%);
   --section-padding: 100px;
   --main-text-color: #777;
+  --button-color: #d81313;
 }
 /* End Variables */
 /* Start Global Rules */
@@ -51,7 +52,6 @@ ul {
 /* End Global Rules */
 /* Start Header */
 header {
-  position: absolute;
   left: 0;
   width: 100%;
   z-index: 1;
@@ -152,101 +152,80 @@ header nav ul li a:hover {
 }
 /* End Header */
 
-/* Start images section */
-.images {
-  top: 150px;
+/* Start swiper section */
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 37rem;
+  object-fit: cover;
+}
+#swiper-1 .swiper-pagination {
+  bottom: 2rem;
+}
+#swiper-1 .swiper-pagination-bullet {
+  opacity: 1;
+  background-color: rgb(18, 48, 54);
+  width: 0.75rem;
+  height: 0.75rem;
+  margin: 0 0.375rem;
+}
+#swiper-1 .swiper-pagination-bullet-active {
+  background-color: #e36262;
+}
+
+.swiper-slide {
   position: relative;
-  margin-bottom: var(--section-padding);
-  display: flex;
 }
-.images img {
-  max-width: 100%;
-  animation-name: cf4FadeInOut;
-  animation-delay: 3s;
-  animation-iteration-count: infinite;
-  animation-duration: 3.3s;
-}
-.images::before {
+.swiper-slide::before {
   content: "";
+  position: absolute;
   width: 100%;
   height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0px;
   background-color: var(--transparent-color);
-  z-index: 2;
 }
-.images .text {
-  padding: calc(var(--section-padding) / 2) 0;
-  text-align: right;
-  width: 90%;
+.swiper-slide .text {
+  width: fit-content;
+  display: flex;
+  flex-flow: column wrap;
   position: absolute;
-  bottom: 65%;
-  transform: translateY(50%);
-  -webkit-transform: translateY(50%);
-  transform: translateY(50%);
-  -ms-transform: translateY(50%);
-  -o-transform: translateY(50%);
-  text-transform: uppercase;
-  right: 10%;
-  z-index: 3;
-}
-.images .text p {
-  font-size: 2.8rem;
+  top: 20%;
+  right: 5%;
   color: white;
+}
+.swiper-slide .text p {
+  color: inherit;
+  font-size: 3.5vw;
   padding: 10px;
 }
-.images .text h2 {
-  font-size: 3.8rem;
-  color: white;
-  font-weight: bold;
-  padding: 10px 0 30px 0;
+.swiper-slide .text h2 {
+  color: inherit;
+  font-size: 4.5vw;
+  padding: 10px 0 25px 0;
 }
-.images .text a {
-  display: block;
-  text-decoration: none;
-  color: white;
-  width: 100px;
-  height: 40px;
-  line-height: 20px;
-  background-color: #d81313;
-  padding: 8px 20px;
+.swiper-slide .text a {
+  color: inherit;
   font-weight: bold;
-  outline: solid 2px black;
-  text-align: center;
+  font-size: 1.4rem;
+  text-decoration: none;
+  background-color: var(--button-color);
+  width: fit-content;
+  display: block;
+  padding: 5px 18px;
+  border: solid 3px #651111;
+  line-height: 30px;
 }
 @media (max-width: 768px) {
-  .images .text {
-    display: flex;
-    flex-flow: column;
+  .swiper-slide img {
+    height: 20rem;
   }
-  .images .text p {
-    font-size: 1.8rem;
+  .swiper-slide .text {
+    top: 10%;
   }
-  .images .text h2 {
+  .swiper-slide .text h2 {
     font-size: 2.5rem;
   }
-  .images .text a {
-    width: 90px;
-    height: 35px;
-    padding: 5px 16px;
-    margin-bottom: 14px;
-  }
-}
-@media (max-width: 370px) {
-  .images .text p {
-    font-size: 1.3rem;
-    padding: 5px;
-  }
-  .images .text h2 {
-    font-size: 1.8rem;
-    padding: 5px 0 15px 0;
-  }
-  .images .text a {
-    width: fit-content;
-    height: 25px;
-    font-size: 13px;
-    line-height: 15px;
+  .swiper-slide .text p {
+    font-size: 2rem;
   }
 }
 .whatsapp {
@@ -273,22 +252,8 @@ header nav ul li a:hover {
   color: green;
 }
 
-@keyframes cf4FadeInOut {
-  0% {
-    opacity: 1;
-  }
-  17% {
-    opacity: 1;
-  }
-  25% {
-    opacity: 1;
-  }
-  92% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
+/* End Slider section */
 
-/* End images section */
+/* Start about section */
+
+/*  End about section */
