--- a/css/tourism.css
+++ b/css/tourism.css
@@ -236,14 +236,15 @@ header nav ul li a:hover {
     font-size: 2rem;
   }
 }
+/* start whatsapp icon */
 .whatsapp {
   position: fixed;
   bottom: 30px;
   right: 30px;
   z-index: 7;
-  background-color: #00f028;
-  width: 60px;
-  height: 60px;
+  background-color: #1fbb6e;
+  width: 50px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -252,13 +253,16 @@ header nav ul li a:hover {
   border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
-}
-.whatsapp a {
   text-decoration: none;
+  box-shadow: #0000004d 0px 0px 20px 0px;
 }
-.whatsapp a i {
-  color: green;
+.whatsapp i {
+  font-size: 2.2rem;
 }
+.whatsapp:hover {
+  background-color: #128c7e;
+}
+/* start whatsapp icon */
 
 /* End Slider section */
 
@@ -267,6 +271,7 @@ header nav ul li a:hover {
   direction: ltr;
   display: flex;
   justify-content: space-between;
+  padding-bottom: var(--section-padding);
 }
 .about .container .text {
   width: 100%;
@@ -319,13 +324,16 @@ header nav ul li a:hover {
   font-size: 1.3rem;
   padding-top: 20px;
 }
-.about .container .image-1 {
-}
 .about .container .image-1 img {
   display: block;
-  width: 100%;
-  max-height: 50%;
+  max-width: 100%;
+  aspect-ratio: 2/1.3;
   object-fit: cover;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 @media (max-width: 992px) {
   .about .container {
@@ -339,5 +347,75 @@ header nav ul li a:hover {
   .about .container .text p:first-child {
     font-size: 3rem;
   }
+  .about .container .text {
+    padding: 0;
+  }
+  .about .container .text p q {
+    font-size: 1.2rem;
+  }
 }
 /*  End about section */
+
+/* Start service section */
+.service {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  background-image: url("../images/8.webp");
+  background-size: cover;
+  position: relative;
+  min-height: 400px;
+}
+.service::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--transparent-color);
+}
+.service p {
+  font-size: 3.5rem;
+  color: white;
+  z-index: 1;
+}
+.service .serv {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  z-index: 1;
+}
+.service .serv .srv {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 150px;
+  width: 20%;
+  background-color: #807f7f;
+  border: 1px solid white;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  text-decoration: none;
+  color: black;
+}
+.service .serv .srv i {
+  display: block;
+}
+@media (max-width: 768px) {
+  .service .serv {
+    flex-flow: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 15px;
+  }
+  .service .serv .srv {
+    width: 90%;
+  }
+}
+/* End service section */
