--- a/css/tourism.css
+++ b/css/tourism.css
@@ -619,6 +619,23 @@ footer .container {
 }
 footer .container i {
   font-size: 6rem;
+  transform: scale(0.9);
+  -webkit-transform: scale(0.9);
+  -moz-transform: scale(0.9);
+  -ms-transform: scale(0.9);
+  -o-transform: scale(0.9);
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+}
+footer .container a:hover i {
+  transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  -o-transform: scale(1.05);
 }
 footer .container .icon {
   padding: 10px;
@@ -634,5 +651,6 @@ footer .container p span {
   color: var(--main-color);
   font-weight: 700;
   text-shadow: 1px 1px 10px;
+  font-size: 2.8rem;
 }
 /* End footer  */
