--- a/css/tourism.css
+++ b/css/tourism.css
@@ -443,16 +443,16 @@ header nav ul li a:hover {
   -o-border-radius: 5px;
   text-decoration: none;
   color: black;
-  -webkit-transition:;
-  -moz-transition:;
-  -ms-transition:;
-  -o-transition:;
+  -webkit-transition: ;
+  -moz-transition: ;
+  -ms-transition: ;
+  -o-transition: ;
   -webkit-transform: scale(0.9);
   -moz-transform: scale(0.9);
   -ms-transform: scale(0.9);
   -o-transform: scale(0.9);
 }
-.service .serv .srv:hover{
+.service .serv .srv:hover {
   transform: scale(1);
   background-color: #807f7f;
   -webkit-transform: scale(1);
@@ -462,7 +462,6 @@ header nav ul li a:hover {
 }
 .service .serv .srv i {
   display: block;
-
 }
 @media (max-width: 768px) {
   .service .serv {
@@ -475,6 +474,11 @@ header nav ul li a:hover {
     width: 90%;
     margin-bottom: 10px;
     background-color: #807f7f;
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
   }
 }
 /* End services section */
@@ -526,7 +530,7 @@ header nav ul li a:hover {
   -ms-transition: all 0.3s;
   -o-transition: all 0.3s;
 }
-.travels .boxes .box:hover{
+.travels .boxes .box:hover {
   background-color: #128c7e8c;
   box-shadow: 1px 1px 10px 5px #02352f8c;
   transform: scale(1);
@@ -626,7 +630,7 @@ header nav ul li a:hover {
     -moz-transform: scale(1);
     -ms-transform: scale(1);
     -o-transform: scale(1);
-}
+  }
   .travels .boxes .box .image-T {
     max-width: 100%;
   }
